# 2024-2025

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  c_cpp_properties.json  project.pros  ue4.code-workspace
.github/workflows/: clang-format.yml
astromech/Electrical/: .$Electrical System (Wiring Focus).drawio.dtmp  .$Full Wiring Diagram.drawio.bkp  .$Full Wiring Diagram.drawio.dtmp  Electrical System (Wiring Focus).drawio  Full Wiring Diagram.drawio
astromech/motor_control/: RedBoardTurboWorkingServoFile.ino
astromech/packet_arduino/: CRCdecoder.h  README.md  RedBoardMainFile.ino  RedBoardTurboWorkingServoFile.h  crc_decoder.ino  debug_mode.h  debug_mode.ino  i2c_pin_led.h  i2c_pin_led.ino  led_control.h  led_control.ino  logic_engine_control.h  logic_engine_control.ino  motor_servo_control.h  motor_servo_control.ino  nvm_control.h  nvm_control.ino  packet_arduino.h  packet_arduino.ino  pc_decoder.h  pc_decoder.ino  pc_decoder_info.h  psi_control.h  psi_control.ino  rc_data_collection.h  rc_data_collection.ino  rc_decoder.h  rc_decoder.ino  rc_tsunami.h  rc_tsunami.ino  redboard_main.ino  reon_hp_i2c.h  reon_hp_i2c.ino  tsunami_control.h  tsunami_control.ino
astromech/packet_computer/: .gitignore  Makefile  PacketCRC.c  PacketCRC.h  README.md  buildmesage  buildmessage  buildmessage.c  buildmessage.cpp  buildmessage.h  buildmessage_test.cpp  command  command_motors_only  command_reon  command_servo  serial_port_write.cpp  serial_send.py
astromech/rc_receiver/: README.txt
astromech/rc_reciever/: README.txt
astromech/ros2/src/astro_move/: CMakeLists.txt  package.xml
astromech/ros2/src/astro_move/msg/: MotorControlMSG.msg
astromech/ros2/src/astro_move/src/: astro_move.cpp  motor_control.cpp
ground_detection/: augment_images.py  label_me.py  label_me_polygons.py  label_me_polygons_640_grayscale.py
ground_detection/gpu_code/: augment_k_test.py  cifar10_resnet.py  inference.py  k_test.py  k_test3_mobilenet.py  k_test4.py  k_test4_bishop.py  k_test_640.py  mobilenet_v2.py  timing_inference.py
ground_detection/jetson_tx1_caffe/: train_val.prototxt
ground_detection/tx1_keras_inference/: Tutorial.pro  convert.py  convert.sh  k2tf_convert.py  label_image.py  main.cpp  run_test.sh
herbie1.5/herbie2_pcb/: herbie2.kicad_pcb  herbie2.kicad_pcb-bak  herbie2.sch  herbie2_v2.kicad_pcb
herbie1.5/ros/navigation_goals/: package.xml
herbie1/ros/: localization.rviz
herbie2/herbie2_pcb/: fp-info-cache  herbie2-cache.lib  herbie2.kicad_pcb  herbie2.kicad_pcb-bak  herbie2.pro  herbie2.sch  herbie2.sch-bak
herbie2/ros/camera_reader/: CMakeLists.txt  package.xml
herbie2/ros/camera_reader/launch/: camera_reader.launch
herbie2/ros/camera_reader/src/: js_opencv_v4l2.cpp  opencv_v4l2.cpp
herbie2/ros/motor_control/: CMakeLists.txt  package.xml
herbie2/ros/motor_control/launch/: roboclaw_cpp.launch  transform_gyro.launch
herbie2/ros/motor_control/nodes/: transform_point_cloud.py
herbie2/ros/motor_control/src/: arduino_node.cpp  encoder_odom.cpp  encoder_odom.h  odom_test.py  pub_odometry.cpp  test_serial.cpp
herbie2/ros/transform_point_cloud/: package.xml
herbie2/ros/transform_point_cloud/cfg/: LookupTransform.cfgc
herbie2/ros/transform_point_cloud/src/: Adafruit_BNO055.cpp  encoder_odom.cpp  pub_odometry.cpp
herbie_nn/: README.md  image_pytorch.py  ros_ground_detection_node.py  test_tracking.py  ztwist_sum.py
herbie_nn/goal_nn/: augment.py  augment_goal_head.py  collect_goal_ui_manual.py  inference.py  pretrained_model.py  pretrained_model_goal_head.py  ros_goal_node.py  train.py  train_goal_head.py
herbie_nn/ground_detection/: convert_to_onnx.py  (+3 more)
herbie_nn/ground_detection/c_test/: CMakeLists.txt  commands  test.cpp
herbie_nn/ros/camera_reader/: CMakeLists.txt  README.md  package.xml
herbie_nn/ros/camera_reader/launch/: camera_reader.launch
herbie_nn/ros/camera_reader/lib/src/: v4l2_helper.c
herbie_nn/ros/camera_reader/src/: camera.cpp  camera.h  js_opencv_v4l2.cpp  sampleINT8API.cpp  test.cpp  test_asm.S  test_convert.S
herbie_nn/ros/camera_reader/src/convert_asm/: Makefile  main.c  test_convert.S
herbie_nn/ros/nav_herbie/: CMakeLists.txt  README.md  package.xml
herbie_nn/ros/nav_herbie/launch/: navigation.launch
herbie_nn/ros/nav_herbie/src/: control_board.cpp  graph.cpp  move_base.cpp  navigation.cpp  navigation.h  recovery.cpp
herbie_nn/ros/navigation/: CMakeLists.txt  package.xml
herbie_nn/ros/navigation/launch/: navigation.launch  navigation_sim.launch
herbie_nn/ros/navigation/src/: control_board.cpp  encoder_odom.cpp  graph.cpp  move_base.cpp  navigation.cpp  navigation.h
herbie_nn/ros/navigation_goals/: CMakeLists.txt
include/: auto_state_machine.h  button_helper_class.h  button_manager.hpp  config.h  controls.h  conveyor_ctrls.hpp  display.h  globals.h  hardware.h  hardware_map.h  pathTest.txt  ports.h
label_me_tools/: build_final_images.py  label_me.py  label_me_polygons.py
localization/: camera_calibration.py  cameraproperty.cpp  capture_test.py  main.cpp  maplab.sh  opencv_test.py  orb-slam2_download.py  orb_slam_2_ros.sh
onvif/: test_onvif.py
pros-test-board/: compile_commands.json  project.pros
pytorch_test/: augment_images.py  main.py
register_blink_using_tc/: register_blink_using_tc.ino
ros/: localization.rviz
ros/navigation_goals/: CMakeLists.txt  package.xml
ros/navigation_goals/src/: navigation_goals.cpp
ros/transform_point_cloud/: CMakeLists.txt  package.xml
ros/transform_point_cloud/launch/: js_test.launch  js_test1.launch  transform_gyro.launch
ros/transform_point_cloud/scripts/: transform_point_cloud_py.py
ros/transform_point_cloud/src/: Adafruit_BNO055.cpp  Adafruit_BNO055.h  bno055.cpp  bno055.h  encoder_odom.cpp  encoder_odom.h  odom_test.py  pub_odometry.cpp  steering.py  transform_gyro_msgs.cpp  transform_point_cloud.cpp
src/: auto_state_machine.cpp  button_helper_class.cpp  button_manager.cpp  conveyor_ctrls.cpp  display.cpp  globals.cpp  hardware.cpp  main.cpp
static/: pathTest.txt
test_project/: test_project.uproject
test_vrep/: test.py  test.ttt
(+765 files in other folders)
