<?xml version="1.0"?>
<package format="2">
  <name>navigation_goals</name>
  <version>0.0.0</version>
  <description>Transform a PointCloud2 with tf2</description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2_py</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <export>
  </export>
</package>
