<?xml version="1.0"?>
<package>
  <name>camera_reader</name>
  <version>1.0.0</version>
  <description>Node to capture camera images for Herbie</description>
  <maintainer email="jseng@calpoly.edu">jseng</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <export>
  </export>
</package>
