<?xml version="1.0"?>
<package format="2">
  <name>camera_reader</name>
  <version>1.0.0</version>
  <description>Node to capture camera images for Herbie</description>
  <maintainer email="jseng@calpoly.edu">jseng</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <export>
  </export>
</package>
